recommendation-service/spinnaker/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommendation-service
  namespace: ns-zcp-edu-0
spec:
  host: recommendation-service
  subsets:
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-service
  namespace: ns-zcp-edu-0
spec:
  hosts:
  - recommendation-service
  http:
  - route: 
    - destination:
        host: recommendation-service
        subset: v2
      weight: 90
    - destination:
        host: recommendation-service
        subset: v3
      weight: 10
